--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,9 +1,24 @@
 @import 'libs/bootstrap-reboot.min';
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500;1,700&display=swap');
+@import 'base/mixins';
+@import 'base/variables';
 
 * {
-    font-family: 'Poppins', sans-serif;
-    font-display: swap;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    //font-display: swap;
     margin: 0;
     padding: 0;
 }
+.container {
+    width: 1140px;
+    margin: 0 auto;
+}
+
+@import 'blocks/aside';
+@import 'blocks/promo';
+@import 'blocks/title';
+@import 'blocks/about';
+@import 'blocks/line';
+@import 'blocks/menu';
