--- a/src/sass/blocks/_aside.scss
+++ b/src/sass/blocks/_aside.scss
@@ -23,7 +23,7 @@
         flex-direction: row;
         width: 210px;
         height: auto;
-        left: auto;
+        //left: auto;
         top: auto;
         left: 68px;
         bottom: 50px;
