--- a/src/sass/blocks/_menu.scss
+++ b/src/sass/blocks/_menu.scss
@@ -76,6 +76,7 @@
     height: 21px;
     width: 36px;
     z-index: 6;
+    cursor: pointer;
     span {
         display: block;
         height: 3px;
