--- a/src/sass/base/_mixins.scss
+++ b/src/sass/base/_mixins.scss
@@ -1,6 +1,6 @@
 @mixin range {
     position: relative;
-    padding: 10px;
+    padding-left: 10px;
     z-index: 1;
     &::before {
         content: '';
