add block, fix bugs
добавлены блоки опыт работы, скилы. 
Устранены выявленные баги в предыдущих блоках.

--- a/src/sass/base/_mixins.scss
+++ b/src/sass/base/_mixins.scss
@@ -1,4 +1,4 @@
-@mixin range {
+@mixin range {  //создание псевдоэлемента (желтый кружок)
     position: relative;
     padding-left: 10px;
     z-index: 1;
