--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -22,3 +22,8 @@
 @import 'blocks/about';
 @import 'blocks/line';
 @import 'blocks/menu';
+@import 'blocks/exp';
+@import 'blocks/skill';
+
+
+@import 'base/media';
