--- a/src/sass/blocks/_about.scss
+++ b/src/sass/blocks/_about.scss
@@ -1,3 +1,4 @@
+//2 блок обо мне
 .about {
     min-height: 600px;
     margin-top: 120px;
@@ -13,11 +14,11 @@
         width: 570px;
         margin: 6px 100px 65px 65px;
         h2 {
-            @include range;
             margin-bottom: 6px;
         }
     }
     &__wrapper-skills {
+        margin-top: 40px;
         display: grid;
         grid-template-columns: 1fr 1fr;
         column-gap: 50px;
@@ -33,6 +34,9 @@
             margin-right: 20px;
             @include range;
             padding: 15px 0 0 15px;
+            img {
+                height: 25px;
+            }
         }
         &-descr {
             span {
