--- a/src/sass/blocks/_line.scss
+++ b/src/sass/blocks/_line.scss
@@ -1,6 +1,10 @@
+//блок для создания желтой линии
 .line {
     width: 60px;
     height: 3px;
     background-color: $main-color;
-    margin: 4px 0 20px 0;
+    margin: 4px auto 20px auto;
+    &_left {
+        margin-left: 0;
+    }
 }
