--- a/src/sass/blocks/_skill.scss
+++ b/src/sass/blocks/_skill.scss
@@ -1,20 +1,51 @@
 //4 блок чем я буду полезен
 .skill {
     margin-top: 120px;
-    &__card-wrapper {
-        padding: 0 10px 0 10px;
+    &__card {
+        position: relative;
+        padding: 0 10px 64px 10px;
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
         align-items: center;
         justify-items: center;
         column-gap: 13px;
-    }
-    &__card {
-        width: 270px;
-        min-height: 270px;
-        padding: 30px 30px 25px 30px;
-        border: 1px solid black;
-        margin-bottom: 13px;
+        row-gap: 13px;
+        height: 350px;
+        overflow: hidden;
+        transition: 1s all;
+        &_active {
+            height: 1182px;
+        }
+        &-more {
+            position: absolute;
+            left: 50%;
+            transform: translateX(-50%);
+            bottom: 10px;
+            height: 45px;
+            padding: 12px 26px;
+            background-color: $main-color;
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+            font-weight: 700;
+            font-size: 14px;
+            margin-right: 10px;
+            border-radius: 10%;
+            color: #000;
+            cursor: pointer;
+            transition: 0.5s all;
+            &:hover {
+                background-color: yellow;
+                box-shadow: 5px 7px 7px rgba(0, 0, 0, 0.15);
+            }
+            &_hide {
+                display: none;
+            }
+        }
+        &-wrapper {
+            width: 100%;
+            min-height: 270px;
+            padding: 30px 30px 25px 30px;
+            border: 1px solid black;
+        }
         &-img {
             margin-bottom: 20px;
             font-size: 31px;
