add block, fix bugs
Добавлены блоки шкала с прогрессом, мои работы, прайс, контакты.
блоки шкала и прайс скрыл.
Настроил ссылки на соц сети и контакты.

--- a/src/sass/blocks/_about.scss
+++ b/src/sass/blocks/_about.scss
@@ -6,9 +6,13 @@
         display: flex;
     }
     &__wrapper-img {
-        width: 400px;
+        //width: 400px;
         //height: 400px;
-        background: url('../img/main_photo.jpg') center (center / cover) no-repeat;
+        //background: url('../img/main_photo.jpg') center (center / cover) no-repeat;
+        overflow: hidden;
+        img {
+            height: 100%;
+        }
     }
     &__wrapper-descr {
         width: 570px;
