--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -18,12 +18,17 @@
 
 @import 'blocks/aside';
 @import 'blocks/promo';
+@import 'blocks/btn';
 @import 'blocks/title';
 @import 'blocks/about';
 @import 'blocks/line';
 @import 'blocks/menu';
 @import 'blocks/exp';
 @import 'blocks/skill';
+@import 'blocks/works';
+@import 'blocks/price';
+@import 'blocks/contact';
 
+@import 'blocks/form';
 
 @import 'base/media';
