--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -2,8 +2,11 @@
 .promo {
     min-height: 100vh;
     position: relative;
-    padding: 206px 0 0 0;
+    padding: 0 0 0 0;
     background: url(../img/main_bg.jpg) center (center/cover) no-repeat;
+    &__wrapper {
+        padding: 340px 0 0 100px;
+    }
     .container {
         padding-left: 200px;
     }
@@ -17,30 +20,6 @@
         display: flex;
         justify-content: start;
     }
-    &__button {
-        height: 45px;
-        padding: 12px 26px;
-        background-color: $main-color;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-        font-weight: 700;
-        font-size: 14px;
-        margin-right: 10px;
-        border-radius: 10%;
-        color: #000;
-        &_crystal {
-            background-color: rgba(0, 50, 50, 0);
-            box-shadow: none;
-        }
-        a{
-            color: #000;
-            text-decoration: none;
-            &:hover {
-                color: #000;
-                text-decoration: none;
-            }
-        }
-        
-
-    }
+    
     
 }
