--- a/src/sass/blocks/_aside.scss
+++ b/src/sass/blocks/_aside.scss
@@ -22,6 +22,7 @@
         border-radius: 5px;
     }
     &.active {
+        display: flex;
         //transform: rotate(-90deg);
         flex-direction: row;
         width: 210px;
@@ -32,6 +33,7 @@
         bottom: 50px;
         img {
             //transform: rotate(90deg);
+            background-color: rgba($color: #000000, $alpha: 0);
             &:hover{
                 transform: scale(2);
             }
