--- a/src/sass/blocks/_skill.scss
+++ b/src/sass/blocks/_skill.scss
@@ -5,7 +5,7 @@
         position: relative;
         padding: 0 10px 64px 10px;
         display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(270px, 270px));
         align-items: center;
         justify-items: center;
         column-gap: 13px;
@@ -13,6 +13,7 @@
         height: 350px;
         overflow: hidden;
         transition: 1s all;
+        justify-content: center;
         &_active {
             height: 1182px;
         }
@@ -41,7 +42,7 @@
             }
         }
         &-wrapper {
-            width: 100%;
+            width: 270px;
             min-height: 270px;
             padding: 30px 30px 25px 30px;
             border: 1px solid black;
