fix bugs, add animation link, add up

--- a/src/sass/blocks/_promo.scss
+++ b/src/sass/blocks/_promo.scss
@@ -19,8 +19,11 @@
     &__button-wrapper {
         display: flex;
         justify-content: start;
-        .btn a {
+        .btn {
             color: #fff;
+            &:hover {
+                cursor: pointer;
+            }
         }
     }
     
