--- a/src/sass/blocks/_exp.scss
+++ b/src/sass/blocks/_exp.scss
@@ -1,7 +1,7 @@
 //3 блок опыт и образование
 .exp {
     text-align: center;
-    padding-top: 120px;
+    margin-top: 120px;
     .line {
         margin: 25px auto 60px auto;
     }
