--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -16,6 +16,26 @@
     margin: 0 auto;
 }
 
+.up-arrow {
+    //visibility: hidden;
+    display: none;
+	position: fixed;
+	right: 40px;
+	bottom: 40px;
+	width: 40px;
+    height: 40px;
+    transition: 1s all;
+    opacity: 0;
+	img {
+		width: 100%;
+    }
+    &_active {
+        //visibility: visible;
+        display: block;
+        opacity: 1;
+    }
+}
+
 @import 'blocks/aside';
 @import 'blocks/promo';
 @import 'blocks/btn';
